# naturalisation_api_gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
samples/: sample.env
src/anef_checker/: __init__.py
src/anef_checker/cli/: __init__.py  cli.py
src/anef_checker/constants/: __init__.py  anef_enums.py  common.py
src/anef_checker/controllers/: __init__.py  anef_status_checker.py  database.py
src/anef_checker/database/: gui.json  status_data.json
src/anef_checker/gui/: __init__.py  about.py  gui.py
src/anef_checker/models/: __init__.py  anef_database.py
tests/: __init__.py
tests/test_naturalisation_api_gui/: __init__.py  test_main.py
